[package]
name = "fluffy"
version = "0.1.1"
edition = "2021"
authors = ["iewnfod"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
clap = { version = "4.4.11", features = ["derive"] }
lazy_mut = "0.1.0"
users = "0.11.0"
